# kepler-vetting-pytorch

./: .gitignore  README.md  cleanup-kepler-project.sh  pyproject.toml  requirements.txt
data/: README.md
data/metadata/: lightcurve_manifest.csv
docs/: data_dictionary.md  data_setup.md  modeling.md  processing.md  results.md
notebooks/: final_report.ipynb
src/data/: build_lightcurve_manifest.py
src/kepler_vetting/data/: build_lightcurve_manifest.py  download_koi_table.py  download_lightcurve_smoke_test.py  download_lightcurves_from_manifest.py  estimate_lightcurve_scale.py
src/kepler_vetting/modeling/: analyze_fused_positive_failures.py  analyze_model_errors.py  compare_model_metrics.py  compare_pairwise_model_errors.py  lightcurve_common.py  local_derived_features.py  splits.py  summarize_dataset_variant_experiment.py  summarize_error_analysis.py  thresholds.py  train_fused_local_model.py  train_fused_local_transit_set_model.py  train_fused_transit_set_model.py  train_global_lightcurve_cnn.py  train_lightcurve_cnn.py  train_rescue_stacked_model.py  train_selective_rescue_rule_model.py  train_stacked_score_model.py  train_tabular_baseline.py  train_tabular_local_features.py  train_three_class_fused_local_model.py
src/kepler_vetting/modeling/experiments/: README.md  __init__.py  train_candidate_weighted_fused_local_model.py  (+9 more)
src/kepler_vetting/processing/: build_processed_dataset.py  common.py  diagnose_model_readiness.py  filter_model_ready_dataset.py  inspect_manifest.py  model_readiness.py  plot_processed_examples.py  validate_processed_dataset.py
